--- a/homepage/templates/homepage/home.html
+++ b/homepage/templates/homepage/home.html
@@ -200,7 +200,7 @@
           <div class="secondContainerTextCellTop">
             <div class="secondContainerTextCellDeco"></div>
             <span class="secondContainerTextCellTitleBold">빠른</span>
-            <span class="secondContainerTextCellTitle">공지사한 시스템</span>
+            <span class="secondContainerTextCellTitle">공지사항 시스템</span>
           </div>
           <div class="secondContainerTextCellText">
             공지사항 전파용 게시판과 댓글 기능으로 빠르게 공지사항을 전파하는 시스템
@@ -220,7 +220,7 @@
           <div class="secondContainerTextCellTop">
             <div class="secondContainerTextCellDeco"></div>
             <span class="secondContainerTextCellTitleBold">편리한</span>
-            <span class="secondContainerTextCellTitle">회계관리시스템</span>
+            <span class="secondContainerTextCellTitle">회계관리 시스템</span>
           </div>
           <div class="secondContainerTextCellText">
             기사님의 배차별 수당 및 특별수당, 노선별 수익 등을 확인 가능한 시스템
