--- a/static/css/humanresource/member.css
+++ b/static/css/humanresource/member.css
@@ -109,31 +109,34 @@ td:nth-child(1) {
 }
 
 td:nth-child(2) {
-    width: 10%;
+    width: 8%;
 }
-
 td:nth-child(3) {
-    width: 12%;
+    width: 10%;
 }
 
 td:nth-child(4) {
-    width: 10%;
+    width: 8%;
 }
 
 td:nth-child(5) {
-    width: 15%;
-}
-
-td:nth-child(6) {
-    width: 15%;
-}
-
-td:nth-child(7) {
     width: 10%;
 }
 
+td:nth-child(6) {
+    width: 12%;
+}
+
+td:nth-child(7) {
+    width: 12%;
+}
+
 td:nth-child(8) {
-    width: 24%;
+    width: 10%;
+}
+
+td:nth-child(9) {
+    width: 26%;
 }
 
 .btnBox div {
@@ -252,4 +255,24 @@ td:nth-child(8) {
 .PopupBtnBox input:nth-child(2) {
     background-color: #0069D9;
     margin: 0 1rem;
+}
+.hrPW{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: calc(100% - 2rem);
+    height: 4rem;
+    margin: 2rem 1rem 0 1rem;
+    font-size: 1.4rem;
+    color: white;
+    background-color: #444444;
+    border-radius: 0.2rem;
+    box-sizing: border-box;
+    cursor: pointer;
+}
+.hrPW svg{
+    margin-right: 1rem;
+}
+.PopupDataCellPw{
+    width: 16rem;
 }
