--- a/crudmember/templates/crudmember/login.html
+++ b/crudmember/templates/crudmember/login.html
@@ -22,18 +22,10 @@
         <div class="loginInformationCell">
           <span class="loginInformationBox">배차관리시스템</span>
           <div class="loginInformationBoxContents">
-            ERP 시스템과 전세버스 베차시스템이
+            ERP 시스템과 전세버스 배차시스템이
             결합되어 전세버스 회사 전반의 업무를
             처리할 수 있는 시스템 입니다.
           </div>
-        </div>
-        <div class="loginInformationToolBox">
-          <a href="">
-            <span>기사 회원가입</span>
-          </a>
-          <a href="{% url 'crudmember:signup_terms' %}">
-            <span>관리자 회원가입</span>
-          </a>
         </div>
       </div>
     </div>
@@ -43,15 +35,11 @@
         <img src="{% static 'images/loginLogo.png' %}" alt="TRP로고">
         <div class="loginBoxTitleCell">
           <span>로그인</span>
-          <span>부여받은 회사코드를 입력해야 회사와 연결됩니다.</span>
+          <span>아이디/비밀번호는 로그인 후 변경하실 수 있습니다.</span>
         </div>
       </div>
       <form method="POST" action="{% url 'crudmember:login' %}" class="loginForm">
-        {%csrf_token%}
-        <div class="loginInputCell">
-          <label class="loginInputLabel">회사코드</label>
-          <input type="text" placeholder="회사코드를 입력해 주세요">
-        </div>
+        {% csrf_token %}
         <div class="loginInputCell">
           <label class="loginInputLabel">아이디</label>
           <input type="text" name=userid placeholder="아이디를 입력해 주세요.">
