--- a/templates/base.html
+++ b/templates/base.html
@@ -165,16 +165,12 @@
 
         <div class="profileBox">
           <div class="profileMenuCell">
-            <a href="">
-              <img src="{% static 'images/createUserIcon.png' %}" alt="설정 아이콘">
-              <span class="profileMenuName">사용자 생성</span>
-            </a>
+            <img src="{% static 'images/createUserIcon.png' %}" alt="설정 아이콘">
+            <span class="profileMenuName">아이디 변경</span>
           </div>
           <div class="profileMenuCell">
-            <a href="">
-              <img src="{% static 'images/passwordIcon.png' %}" alt="비밀번호 변경">
-              <span class="profileMenuName">비밀번호 변경</span>
-            </a>
+            <img src="{% static 'images/passwordIcon.png' %}" alt="비밀번호 변경">
+            <span class="profileMenuName">비밀번호 변경</span>
           </div>
           <div class="profileMenuCell">
             <a href="{% url 'crudmember:logout' %}">
@@ -195,14 +191,79 @@
         {% block content %}
         {% endblock %}
       </div>
-      
+
       {% block popup %}
       {% endblock %}
+
+      <div class="HomePopupAreaModules">
+        <div class="HomePopupBgModules"></div>
+        <form method="post" action="{% url 'crudmember:change_id' %}" class="HomePopupContainer"
+          enctype="multipart/form-data">
+          {% csrf_token %}
+          <div class="PopupTitle">아이디 변경</div>
+          <div class="HomePopupDataArea">
+            <div class="HomePopupDataCell">
+              <span class="PopupDataTitle">비밀번호</span>
+              <div class="dateBox">
+                <input name="password" type="password" class="HomePopupDataInput PopupDataInputPwCheckerId">
+              </div>
+            </div>
+            <div class="HomePopupDataCell">
+              <span class="PopupDataTitle">새 아이디</span>
+              <div class="dateBox">
+                <input type="text" check_result="fail" name="user_id" id="id" placeholder="새 아이디를 입력해 주세요."
+                  class="HomePopupDataInput username_input">
+              </div>
+            </div>
+            <div class="idchecker" onClick="id_overlap_check()">중복확인</div>
+          </div>
+          <div class="PopupBtnBox">
+            <div class="btnModules closeBtn">닫기</div>
+            <div class="btnModules editBtn">저장</div>
+          </div>
+        </form>
+      </div>
+
+      <div class="HomePopupAreaModules">
+        <div class="HomePopupBgModules"></div>
+        <form method="post" action="{% url 'crudmember:change_password' %}" class="HomePopupContainer HomePopupContainerPw"
+          enctype="multipart/form-data">
+          {% csrf_token %}
+          <div class="PopupTitle">비밀번호 변경</div>
+          <div class="HomePopupDataArea">
+            <div class="HomePopupDataCell">
+              <span class="PopupDataTitle">비밀번호</span>
+              <div class="dateBox">
+                <input name="cur_password" type="password" class="HomePopupDataInput PopupDataInputPwCheckerPw">
+              </div>
+            </div>
+            <div class="HomePopupDataCell">
+              <span class="PopupDataTitle">새 비밀번호</span>
+              <div class="dateBox">
+                <input name="password1" type="password" class="HomePopupDataInput PopupDataInputNewPw">
+              </div>
+            </div>
+            <div class="HomePopupDataCell">
+              <span class="PopupDataTitle">비밀번호 확인</span>
+              <div class="dateBox">
+                <input name="password2" type="password" class="HomePopupDataInput PopupDataInputOverlap">
+              </div>
+            </div>
+          </div>
+          <div class="PopupBtnBox">
+            <div class="btnModules closeBtn">닫기</div>
+            <div class="btnModules editBtn">저장</div>
+          </div>
+        </form>
+      </div>
+
     </div>
 
   </div>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="{% static 'js/sideNavMenu.js' %}"></script>
   <script src="{% static 'js/profile.js' %}"></script>
+  <script src="{% static 'js/accountPopup.js' %}"></script>
   {% block script %}{% endblock %}
 </body>
 
