--- a/crudmember/templates/crudmember/home.html
+++ b/crudmember/templates/crudmember/home.html
@@ -155,7 +155,7 @@
             <span>호수별A3</span>
           </div>
         </a>
-        <a href="" target="_blank">
+        <a href="{% url 'dispatch:daily_driving_list' %}" target="_blank">
           <div class="printCell">
             <svg xmlns="http://www.w3.org/2000/svg" width="23.1" height="20" viewBox="0 0 23.1 20">
               <path id="Icon_zocial-print" data-name="Icon zocial-print"
